[package]
name = "librarian"
version = "0.1.0"
authors = ["Matt Huszagh <huszaghmatt@gmail.com>"]
edition = "2018"

[dependencies]
sha1 = "0.10"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6.0"
clap = "3.0.0-beta.2"
regex = "1"
fuzzy-matcher = "0.3"
url = { version = "2", features = ["serde"] }
indexmap = { version = "1.7", features = ["serde"] }
hex = "0.4.3"
